Fix position of Scroll To Top button on mobile

--- a/nova/nova.css
+++ b/nova/nova.css
@@ -321,7 +321,7 @@ button:disabled, button[disabled]
 	}
 	#toTop
 	{
-		transform:scale(2) translate(-10px, -15px);
+		transform:scale(2) translate(-10px, 10px);
 	}
 }
 .iconWithTooltip
